<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.example.sudokusolver.ColdiacView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/header"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/buttonComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"/>
    <com.example.sudokusolver.ColdiacView
        android:id="@+id/sub_heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/sub_header1"
        android:textAlignment="center"
        android:textColor="@color/colorGoldDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"/>
    <com.example.sudokusolver.ColdiacView
        android:id="@+id/sub_heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/sub_header2"
        android:textAlignment="center"
        android:textColor="@color/colorGoldDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_heading1"/>

    <com.example.sudokusolver.ProximaButton
        android:id="@+id/buttonComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/complete"
        android:textSize="20sp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_heading2" />

    <com.example.sudokusolver.ProximaButton
        android:id="@+id/buttonStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/step"
        android:textSize="20sp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComplete" />

    <com.example.sudokusolver.ProximaButton
        android:id="@+id/buttonRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/rules"
        android:textSize="20sp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStep" />

    <com.example.sudokusolver.ProximaButton
        android:id="@+id/buttonSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/settings"
        android:textSize="20sp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRules" />

</android.support.constraint.ConstraintLayout>